--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
-<p>Hello 大家好</p>
-<p>我是wangshen11，这是我的个人网站。 </p>
-<p>很高兴你来到这里。</p>
-<p>我是一个好人。</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <script src="1.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>个人网页</title>
+</head>
+<body>
+    <div class="box">
+        <img class="box-img" src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fup.qq22.com.cn%2Fimg%2F1902530029%2F179419568.jpg&refer=http%3A%2F%2Fup.qq22.com.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1637029897&t=f2265b7eb6b0cae3d5762702dd55be56" 
+        alt="UiIGnS.jpg" border="0" />
+        <h1>王申</h1>
+        <h5>我的个人网页</h5>
+        <p></p>
+        <ul>
+            <li><a href="#"><i class="fa fa-qq" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-weixin" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-weibo" aria-hidden="true"></i></a></li>
+        </ul>
+    </div>
+
+
+</body>
+</html>
