--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="box-img" src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fup.qq22.com.cn%2Fimg%2F1902530029%2F179419568.jpg&refer=http%3A%2F%2Fup.qq22.com.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1637029897&t=f2265b7eb6b0cae3d5762702dd55be56" 
         alt="UiIGnS.jpg" border="0" />
         <h1>王申</h1>
-        <h5>我的个人网页</h5>
+        <h5>我的个人主页</h5>
         <p></p>
         <ul>
             <li><a href="#"><i class="fa fa-qq" aria-hidden="true"></i></a></li>
